# sfmlBouncingShapesUniversityOfMemorialAssignment

./: CMakeLists.txt  main.cpp  main.cpp.backup  readme.md
resources/: config.txt
